fix truncated course cursor in new conversations compose dialog
fixes CNVS-7937

test plan:
 - create a course with a long name (>25 chars).
 - go to the new conversations compose dialog and open the
   courses dropdown. check the mouse pointer when it hovers over
   the truncated course name.

Reviewed-on: https://gerrit.instructure.com/24023
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Cam Theriault <cam@instructure.com>
Product-Review: Braden Anderson <banderson@instructure.com>

--- a/app/stylesheets/compose_message_dialog.scss
+++ b/app/stylesheets/compose_message_dialog.scss
@@ -251,6 +251,11 @@ $subtleBorderColor: #e5e5e5;
         height: auto;
       }
     }
+
+    .message_course abbr {
+      cursor: pointer;
+    }
+
   }
 
   .context_messages .collectionViewItems {
